istio-poc/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: poc
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
