istio-poc/manifests/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: red
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: green
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: poc
spec:
  type: ClusterIP
  selector:
    app: blue
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
